[gd_scene load_steps=5 format=3 uid="uid://dofxa8sxjy7aw"]

[ext_resource type="Script" path="res://UI/PopUp/HoverPopup.gd" id="1_58dtv"]
[ext_resource type="FontFile" uid="uid://bgmbqeubb34cp" path="res://Assets/Fonts/rogue.ttf" id="2_tkrm4"]
[ext_resource type="PackedScene" uid="uid://c0331kddmygfg" path="res://UI/PopUp/HoverPopupEntry.tscn" id="3_eqtw0"]

[sub_resource type="LabelSettings" id="LabelSettings_0dv8f"]
line_spacing = 0.0
font = ExtResource("2_tkrm4")
font_size = 26

[node name="HoverPopup" type="PanelContainer"]
offset_right = 45.0
offset_bottom = 53.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_58dtv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EntryContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TileLabel" type="Label" parent="MarginContainer/EntryContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tile (0, 0)"
label_settings = SubResource("LabelSettings_0dv8f")
horizontal_alignment = 1

[node name="EntityEntry1" parent="MarginContainer/EntryContainer" instance=ExtResource("3_eqtw0")]
unique_name_in_owner = true
layout_mode = 2

[node name="EntityEntry2" parent="MarginContainer/EntryContainer" instance=ExtResource("3_eqtw0")]
unique_name_in_owner = true
layout_mode = 2

[node name="EntityEntry3" parent="MarginContainer/EntryContainer" instance=ExtResource("3_eqtw0")]
unique_name_in_owner = true
layout_mode = 2
